--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
+    <link href="button.css" rel="stylesheet">
 </head>
 <body>
 <h1>Bienvenue sur mon site !</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eligendi exercitationem voluptates. Deserunt
+    esse exercitationem laborum officia quisquam sit, vero.</p>
 </body>
 </html>
