--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,10 @@
 <h1>Bienvenue sur mon site !</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eligendi exercitationem voluptates. Deserunt
     esse exercitationem laborum officia quisquam sit, vero.</p>
+<ul>
+    <li>
+        bleu
+    </li>
+</ul>
 </body>
 </html>
